# System-Monitor

./: .gitignore  README.md  index.html  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  processes.rs  system.rs  webview.rs
src-tauri/src/models/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  process.rs  system.rs
src/components/charts/: GaugeChart.tsx  LineChart.tsx  SparkLine.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx  Topbar.tsx
src/hooks/: useSystemStats.ts
src/lib/: utils.ts
src/pages/: CPU.tsx  Dashboard.tsx  Disk.tsx  GPU.tsx  Memory.tsx  Network.tsx  Processes.tsx  Settings.tsx  Speedtest.tsx
src/store/: useAppStore.ts  useStatsStore.ts
src/styles/: globals.css
src/types/: index.ts
