[package]
name = "system-monitor"
version = "0.2.2"
description = "Modern system monitor — open source replacement for Task Manager, htop and btop"
authors = ["XSaitoKungX"]
edition = "2021"
license = "MIT"

[lib]
name = "system_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
nvml-wrapper = { version = "0.10", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.13"

[features]
default = ["nvidia"]
nvidia = ["nvml-wrapper"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
strip = false

